Kcov (28):
	* Issue #101: Fix regression which caused --collect-only to work only
	  if the source code was available.

	* Coveralls: Use source_digest instead of source (current API?)

	* Issue #99: Add support for looking up debug info from .gnu_debuglink
	  sections (Vincent Brillault)

	* Issue #98: Show execution order in the HTML output and add headings for
	  the source view

	* Issue #26: Don't warn for non-existing ELFs (typically linux-vdso.so.1)

	* Issue #91: Correctly generate [merged] output after running two programs

	-- Simon Kagstrom <simon.kagstrom@gmail.com>, 

Kcov (27):
	* Issue #90: coveralls: Publish merged results if available

	* Issue #88: bash: Correct handling of ${var#}

	* Issue #87: Allow coveralls uploads when using --merge (Ricardo Martins)

	* Issue #86: Fix build on distros with Python 3 as default (David Barnett)

	* python: Improve handling of some corner-cases for '''-strings

	* Issue #76: bash: Handle multi-line quoted strings

	* Issue #60: Add --merge option to merge output of multiple runs (i.e.,
	  what the kcov-merge script did, but now integrated)

	* Issue #81: Make --include-path= combined with --include-pattern=
	  coexist more naturally (i.e., consider both)

	* Lookup realpath of the paths passed to --include/exclude-path=

	* Issue #18: Add --verify option that checks that all breakpoints are
	  set on proper addresses (i.e., instruction boundaries)

	* Issue #80: Fix coverage accumulation for PIE executables

	-- Simon Kagstrom <simon.kagstrom@gmail.com>, Fri May  1 19:44:04 CEST 2015

Kcov (26):
	* Issue #77: Collect coverage for Position-Independent Executables
	 (Kang Seonghoon)

	* Issue #72: Don't crash on filenames <3 characters long (Kang Seonghoon)

	* Issue #71: Don't skip instructions on SIGSTOP (unbreaks PowerPC)

	* Issue #70: bash: Handle $# ad ${#var ..} (not comments)

	* Issue #66: bash: Unbreak handling of arithmetic shifts (conflict with
	  heredocs)
