@@ -18,29 +18,25 @@
       <table cellpadding="1" border="0" width="100%">
         <tr id="command">
           <td class="headerItem" width="20%">Command:</td>
-          <td id="header-command" class="headerValue" width="80%" colspan=6>???</td>
+          <td id="header-command" class="headerValue" width="60%" colspan=4>???</td>
+          <td><span class="lineNumLegend">Line number</span></td>
         </tr>
         <tr>
           <td class="headerItem" width="20%">Date: </td>
-          <td id="header-date" class="headerValue" width="15%"></td>
-          <td width="5%"></td>
+          <td id="header-date" class="headerValue" width="20%" colspan=2></td>
           <td class="headerItem" width="20%">Instrumented lines:</td>
-          <td id="header-instrumented" class="headerValue" width="10%">???</td>
+          <td id="header-instrumented" class="headerValue" width="20%">???</td>
+          <td><span class="coverHitsLegend">Hits</span></td>
         </tr>
         <tr>
           <td class="headerItem" width="20%">Code covered:</td>
-          <td id="header-percent-covered" width="15%">???</td>
-          <td width="5%"></td>
+          <td id="header-percent-covered" width="20%" colspan=2>???</td>
           <td class="headerItem" width="20%">Executed lines:</td>
-          <td id="header-covered" class="headerValue" width="10%">???</td>
+          <td id="header-covered" class="headerValue" width="20%">???</td>
+          <td><span class="orderNumLegend">Order</span></td>
         </tr>
       </table>
     </td>
-  </tr>
-  <tr>
-  <td>
-<b><source-line><span class="lineNum">Line#</span><span class="coverHits">Hits</span><span class="{{class}}"></span></span><span class="orderNum">Order</span></source-line></b>
-  </td>
   </tr>
   <tr><td class="ruler"><img src="data/glass.png" width="3" height="3" alt=""/></td></tr>
 </table>
